# nsec-cache-datastore-demo

./: .gitignore  LICENSE  Makefile  README.md  demo.ps1  docker-compose.yml  env.example
auth/: Dockerfile  entrypoint.sh  generate_zone.py  named.conf
auth/keys/: .gitkeep
auth/logs/: .gitkeep
auth/zones/: .gitkeep
client/: Dockerfile  pyproject.toml
client/nsecchain/: __init__.py  decoder.py  encoder.py  ordering.py  parser.py
client/scripts/: __init__.py  generate_zone.py  prime.py  report.py  verify_synthesis.py
client/tests/: __init__.py  test_encoder.py  test_integration.py  test_ordering.py
recursor/: Dockerfile  entrypoint.sh  unbound.conf
recursor/logs/: .gitkeep
